--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.1",
     "@radix-ui/react-context-menu": "^2.2.1",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
@@ -18,7 +19,6 @@
     "geist": "^1.3.1",
     "lucide-react": "^0.441.0",
     "next": "14.2.8",
-    "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
@@ -32,6 +32,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
