--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-context-menu": "^2.2.1",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
+    "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
