--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-context-menu": "^2.2.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@vercel/speed-insights": "^1.0.12",
@@ -20,9 +21,11 @@
     "geist": "^1.3.1",
     "lucide-react": "^0.441.0",
     "next": "14.2.8",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
