--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.9.0",
     "geist": "^1.3.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
     "next": "14.2.8",
     "next-themes": "^0.3.0",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
