--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.9.0",
     "geist": "^1.3.1",
+    "jose": "^5.9.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
     "next": "14.2.8",
